--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,3 @@
-
 $text: #fff;
 $main-bg-dark-color: #202020;
 $accent-color: #ff834e;
@@ -9,129 +8,172 @@ $second-text: #393939;
   src: url('fonts/Montserrat-Light.ttf');
   font-weight: 300;
 }
+
 @font-face {
   font-family: 'Montserrat';
   src: url('fonts/Montserrat-Regular.ttf');
   font-weight: 400;
 }
+
 @font-face {
   font-family: 'Montserrat';
   src: url('fonts/Montserrat-Medium.ttf');
   font-weight: 500;
 }
+
 @font-face {
   font-family: 'Montserrat';
   src: url('fonts/Montserrat-SemiBold.ttf');
   font-weight: 600;
 }
+
 @font-face {
   font-family: 'Montserrat';
   src: url('fonts/Montserrat-Bold.ttf');
   font-weight: 700;
 }
+
 @font-face {
   font-family: 'Roboto';
   src: url('fonts/Roboto-Light.ttf');
   font-weight: 300;
 }
+
 @font-face {
   font-family: 'Roboto';
   src: url('fonts/Roboto-Medium.ttf');
   font-weight: 500;
 }
+
 @font-face {
   font-family: 'SourceSansPro';
   src: url('fonts/SourceSansPro-Light.ttf');
   font-weight: 300;
 }
 
-html {
-  font-size: 14px;
-}
-body {
-  font-family: 'Montserrat', sans-serif;
-  color: $text;
-}
 * {
   margin: 0;
 }
+
+html {
+  font-size: 14px;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  color: $text;
+  background-color: $main-bg-dark-color;
+}
+
 .container {
   width: 87%;
   max-width: 1410px;
   margin: 0 auto;
 }
 
-// .button_with-icon {
-//   &::after {
-//     width: 62px;
-//     height: 100%;
-//     background-position: center;
-//     background-image: url("data:image/svg+xml,%3Csvg width='18' height='17' viewBox='0 0 18 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8.16727 1.28204C7.89113 1.28204 7.66727 1.05819 7.66727 0.782043C7.66727 0.505902 7.89113 0.282043 8.16727 0.282044L16.444 0.282043C16.6087 0.282044 16.7547 0.36165 16.8459 0.484479C16.9687 0.575581 17.0483 0.72166 17.0483 0.886329L17.0483 9.16305C17.0483 9.4392 16.8244 9.66305 16.5483 9.66305C16.2721 9.66305 16.0483 9.4392 16.0483 9.16305V1.80063L1.15692 16.692C0.961656 16.8873 0.645074 16.8873 0.449812 16.692C0.254549 16.4967 0.254549 16.1802 0.449812 15.9849L15.1527 1.28204L8.16727 1.28204Z' fill='white'/%3E%3C/svg%3E%0A");
-//   }
-// }
-
 // HEADER
 .header {
-  background-color: $main-bg-dark-color;
-
   &__body {
-    width: 95%;
-    position: relative;
+    width: 94%;
     height: 50px;
+    margin: 0 auto;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  &__burger-menu-icon {
-    position: relative;
-    z-index: 99;
+
+  &__logo {
+    width: 45px;
+    height: 24px;
+    background: no-repeat center/cover url("data:image/svg+xml, %3Csvg width='45' height='24' viewBox='0 0 63 33' fill='none' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M20.387 32.807H27.3634L31.3065 28.7982L35.2495 32.807H42.1987L31.2928 21.7194L20.387 32.807ZM0 8.91576L11.7519 31.9839L18.8655 25.1021L10.3613 11.6293L0 8.91576ZM62.7273 8.91219L50.9755 31.9804L43.8619 25.0985L52.3663 11.6257L62.7273 8.91219ZM31.297 0L19.5722 16.0817L22.7013 21.3544L31.297 12.8804L39.8925 21.3544L43.0216 16.0817L31.297 0Z' fill='white' /%3E%3C/svg%3E ");
   }
 
-}
-.nav-menu {
-  box-sizing: border-box;
-  position: fixed;
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  background-color: $main-bg-dark-color;
-  top: 0;
-  left: 0;
-  padding: 40px 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-  &__item {
+  &__button {
+    display: none;
+  }
+
+  &__contact-number {
+    display: none;
+  }
+
+  &__menu {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    overflow: hidden;
+
+    width: 100vw;
+    height: 100vh;
+
+    background-color: $main-bg-dark-color;
+
+    padding: 40px 30px;
+
+    &_active {
+      display: flex;
+    }
+  }
+
+  &__menu-item {
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
     color: inherit;
     text-decoration: none;
     border-bottom: 1px solid transparent;
+
     &:hover {
       border-color: $text;
     }
   }
-  @media screen and (width: 768px) {}
+
+  &__burger-menu-icon {
+    box-sizing: border-box;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    position: relative;
+    background: no-repeat center/17.5px 9px url("data:image/svg+xml, %3Csvg width='19' height='10' viewBox='0 0 19 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.75' y='0.75' width='17.5' height='1.25' rx='0.625' fill='white'/%3E%3Crect x='0.75' y='4.5' width='17.5' height='1.25' rx='0.625' fill='white'/%3E%3Crect x='0.75' y='8.25' width='17.5' height='1.25' rx='0.625' fill='white'/%3E%3C/svg%3E%0A") #292929;
+    box-shadow: 1px 3px 4px rgba(0, 0, 0, 0.2);
+    z-index: 99;
+  }
 }
 
 // INTRO
-.intro {
-  position: relative;
-  // &::before {
-  // }
-  background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png") #171718;
+.section-1 {
+  background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png");
+  overflow: hidden;
+
   &__body {
+    position: relative;
     padding: 30px 0 25px;
-    text-align: left;
-    max-width: 830px;
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    z-index: 0;
+
+    &::before {
+      position: absolute;
+      top: 80px;
+      right: -148px;
+      width: 298px;
+      height: 385px;
+      background: no-repeat center/cover url("img/header/E.png");
+      content: "";
+      opacity: 0.2;
+      z-index: 1;
+    }
   }
 
-  &__e-com-decor {
+  &__tag {
     font-weight: 700;
     font-size: 13px;
     line-height: 15px;
@@ -143,41 +185,45 @@ body {
 
     margin-bottom: 10px;
   }
+
   &__title {
     font-weight: 700;
     font-size: 21px;
     line-height: 28px;
     margin-bottom: 24px;
   }
-  &__description {
+
+  &__subtitle {
     display: none;
   }
-  &__bg-decor-pic {
+
+  &__img {
     position: relative;
     align-self: center;
     width: 175px;
     height: 252px;
     background: no-repeat center/cover url("img/header/Mockup.png");
     margin-bottom: 5px;
+
     &::before {
       position: absolute;
-      width: 201.8px;
-      height: 201.8px;
+      width: 202px;
+      height: 202px;
       left: -20px;
       top: 6px;
       border-radius: 50%;
-      
-      background: linear-gradient(180deg, rgba(167, 47, 114, 0.7) 0%, rgba(255, 106, 106, 0) 100%);
-      backdrop-filter: blur(46.0728px);
+
+      background: linear-gradient(180deg, rgba(167, 47, 114, 0.7) 0%, rgba(255, 106, 106, 0.2) 40%, rgba(255, 106, 106, 0) 100%);
+      filter: drop-shadow(0px -5px 9px rgba(0, 0, 0, 0.1));
       z-index: -1;
       content: "";
     }
   }
+
   &__button {
-    display: block;
     width: 100%;
     border: none;
-    color: inherit;
+    color: $text;
     position: relative;
     background-color: $accent-color;
     padding: 15px;
@@ -187,6 +233,12 @@ body {
     font-size: 16px;
     line-height: 20px;
     margin-bottom: 11px;
+    align-self: center;
+
+    &::before {
+      content: "Заказать звонок";
+    }
+
     &::after {
       position: absolute;
       top: 0;
@@ -200,123 +252,174 @@ body {
       content: "";
     }
   }
+
+  &__sub-button {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 15px;
+    font-variant: small-caps;
+    opacity: 0.5;
+    order: 6;
+    align-self: center;
+  }
+
+  &__button {
+    width: 100%;
+    border: none;
+    color: $text;
+    position: relative;
+    background-color: $accent-color;
+    padding: 15px;
+    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 11px;
+    align-self: center;
+
+    &::before {
+      content: "Заказать звонок";
+    }
+
+    &::after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 58px;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.21895 1.45829C6.00642 1.45829 5.83412 1.286 5.83412 1.07346C5.83412 0.860916 6.00642 0.688619 6.21895 0.688619L12.5893 0.688618C12.7164 0.688619 12.8291 0.750225 12.8992 0.845205C12.9935 0.915348 13.0545 1.0276 13.0545 1.15412L13.0545 7.5245C13.0545 7.73704 12.8822 7.90934 12.6697 7.90934C12.4571 7.90934 12.2848 7.73704 12.2848 7.5245L12.2848 1.85761L0.823379 13.3191C0.673091 13.4693 0.429427 13.4693 0.279138 13.3191C0.12885 13.1688 0.12885 12.9251 0.279138 12.7748L11.5957 1.45829L6.21895 1.45829Z' fill='white'/%3E%3C/svg%3E ");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-color: #de774b;
+      content: "";
+    }
+  }
+
   &__under-button-text {
     font-weight: 300;
     font-size: 12px;
     line-height: 15px;
-    
+
     font-variant: small-caps;
     opacity: 0.5;
     align-self: center;
   }
 }
 
-.how-we-work {
-  background-color: #fff;
-  color: $second-text;
-  &__title {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-  }
 
-  }
 
-// svg иконка меняет цвет при наведении
-.how-we-work_item:hover {
-  #block-content__icon { 
-  fill: #fff;
-  }
-  .block-content__icon {
-    background-color: #fff
-  }
-}
 
-.card {
-  display: block;
-  &__image {
-    overflow: hidden;
-    &>* {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  &:hover {
-    opacity: 1;
-    // &::before {
-    //   background-image: ;
-    // }
-    // &::after {
-    //   тут короче нижнее подчеркивание
-    // }
-  }
-}
+// .how-we-work {
+//   background-color: #fff;
+//   color: $second-text;
+//   &__title {
+//     font-weight: 400;
+//     font-size: 14px;
+//     line-height: 17px;
+//     text-align: center;
+//   }
 
-/* accordion */
+//   }
 
-input::-ms-clear {
-  display: none
-}
+// // svg иконка меняет цвет при наведении
+// .how-we-work_item:hover {
+//   #block-content__icon { 
+//   fill: #fff;
+//   }
+//   .block-content__icon {
+//     background-color: #fff
+//   }
+// }
 
-.accordion {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
+// .card {
+//   display: block;
+//   &__image {
+//     overflow: hidden;
+//     &>* {
+//       width: 100%;
+//       height: 100%;
+//     }
+//   }
+//   &:hover {
+//     opacity: 1;
+//     // &::before {
+//     //   background-image: ;
+//     // }
+//     // &::after {
+//     //   тут короче нижнее подчеркивание
+//     // }
+//   }
+// }
 
-.accordion--item {
-  width: 100%;
-  background: #fff;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
-  border-radius: 20px;
-  font-family: Spartan, sans-serif;
-  font-size: 18px;
-  line-height: 1.4;
-  letter-spacing: 0;
-}
+// /* accordion */
 
-.accordion--label {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 34px 45px 33px 0;
-}
+// input::-ms-clear {
+//   display: none
+// }
 
-.accordion--icon::before {
-  background-position: center;
-  content: '';
-  display: block;
-  width: 83px;
-  height: 32px;
-  background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.78125L2.28396 2' stroke='black' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
+// .accordion {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 20px;
+// }
 
-  transition: transform .3s;
-  transform: rotate(0deg)
-}
+// .accordion--item {
+//   width: 100%;
+//   background: #fff;
+//   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+//   border-radius: 20px;
+//   font-family: Spartan, sans-serif;
+//   font-size: 18px;
+//   line-height: 1.4;
+//   letter-spacing: 0;
+// }
 
-.accordion--question {
-  margin: 0;
-  font-weight: 600;
-}
+// .accordion--label {
+//   position: relative;
+//   display: flex;
+//   flex-wrap: wrap;
+//   align-items: center;
+//   padding: 34px 45px 33px 0;
+// }
 
-.accordion--answer {
-  font-weight: 500;
-  display: none;
-  overflow: hidden;
-  margin: 18px 0  0 83px;
-  flex-basis: 1fr;
-}
+// .accordion--icon::before {
+//   background-position: center;
+//   content: '';
+//   display: block;
+//   width: 83px;
+//   height: 32px;
+//   background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.78125L2.28396 2' stroke='black' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+//   background-repeat: no-repeat;
 
-.accordion--input {
-  position: absolute;
-  opacity: 0;
-  z-index: -99;
-}
+//   transition: transform .3s;
+//   transform: rotate(0deg)
+// }
 
-.accordion--input:checked + .accordion--label::before {
-  transform: rotate(90deg);
-  background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.7812");
-}
+// .accordion--question {
+//   margin: 0;
+//   font-weight: 600;
+// }
+
+// .accordion--answer {
+//   font-weight: 500;
+//   display: none;
+//   overflow: hidden;
+//   margin: 18px 0  0 83px;
+//   flex-basis: 1fr;
+// }
+
+// .accordion--input {
+//   position: absolute;
+//   opacity: 0;
+//   z-index: -99;
+// }
+
+// .accordion--input:checked + .accordion--label::before {
+//   transform: rotate(90deg);
+//   background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.7812");
+// }
+
+// li {
+//   list-style-type: "+ ";
+// }
