--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: 'Montserrat';
   src: url("fonts/Montserrat-Light.ttf");
@@ -46,6 +47,10 @@
   font-weight: 300;
 }
 
+* {
+  margin: 0;
+}
+
 html {
   font-size: 14px;
 }
@@ -53,10 +58,12 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   color: #fff;
+  background-color: #202020;
 }
 
-* {
-  margin: 0;
+.wrapper {
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .container {
@@ -65,14 +72,10 @@ body {
   margin: 0 auto;
 }
 
-.header {
-  background-color: #202020;
-}
-
 .header__body {
-  width: 95%;
-  position: relative;
+  width: 94%;
   height: 50px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,25 +87,22 @@ body {
           align-items: center;
 }
 
-.header__burger-menu-icon {
-  position: relative;
-  z-index: 99;
+.header__logo {
+  width: 45px;
+  height: 24px;
+  background: no-repeat center/cover url("data:image/svg+xml, %3Csvg width='45' height='24' viewBox='0 0 63 33' fill='none' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M20.387 32.807H27.3634L31.3065 28.7982L35.2495 32.807H42.1987L31.2928 21.7194L20.387 32.807ZM0 8.91576L11.7519 31.9839L18.8655 25.1021L10.3613 11.6293L0 8.91576ZM62.7273 8.91219L50.9755 31.9804L43.8619 25.0985L52.3663 11.6257L62.7273 8.91219ZM31.297 0L19.5722 16.0817L22.7013 21.3544L31.297 12.8804L39.8925 21.3544L43.0216 16.0817L31.297 0Z' fill='white' /%3E%3C/svg%3E ");
 }
 
-.nav-menu {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  position: fixed;
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  background-color: #202020;
-  top: 0;
-  left: 0;
-  padding: 40px 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.header__button {
+  display: none;
+}
+
+.header__contact-number {
+  display: none;
+}
+
+.header__menu {
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -111,9 +111,25 @@ body {
       -ms-flex-align: center;
           align-items: center;
   gap: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-color: #202020;
+  padding: 40px 30px;
 }
 
-.nav-menu__item {
+.header__menu_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__menu-item {
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
@@ -122,19 +138,31 @@ body {
   border-bottom: 1px solid transparent;
 }
 
-.nav-menu__item:hover {
+.header__menu-item:hover {
   border-color: #fff;
 }
 
-.intro {
+.header__burger-menu-icon {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
   position: relative;
-  background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png") #171718;
+  background: no-repeat center/17.5px 9px url("data:image/svg+xml, %3Csvg width='19' height='10' viewBox='0 0 19 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.75' y='0.75' width='17.5' height='1.25' rx='0.625' fill='white'/%3E%3Crect x='0.75' y='4.5' width='17.5' height='1.25' rx='0.625' fill='white'/%3E%3Crect x='0.75' y='8.25' width='17.5' height='1.25' rx='0.625' fill='white'/%3E%3C/svg%3E%0A") #292929;
+  -webkit-box-shadow: 1px 3px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 3px 4px rgba(0, 0, 0, 0.2);
+  z-index: 99;
 }
 
-.intro__body {
+.section-1 {
+  background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png");
+  overflow: hidden;
+}
+
+.section-1__body {
+  position: relative;
   padding: 30px 0 25px;
-  text-align: left;
-  max-width: 830px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,9 +173,22 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  z-index: 0;
 }
 
-.intro__e-com-decor {
+.section-1__body::before {
+  position: absolute;
+  top: 80px;
+  right: -148px;
+  width: 298px;
+  height: 385px;
+  background: no-repeat center/cover url("img/header/E.png");
+  content: "";
+  opacity: 0.2;
+  z-index: 1;
+}
+
+.section-1__tag {
   font-weight: 700;
   font-size: 13px;
   line-height: 15px;
@@ -162,18 +203,18 @@ body {
   margin-bottom: 10px;
 }
 
-.intro__title {
+.section-1__title {
   font-weight: 700;
   font-size: 21px;
   line-height: 28px;
   margin-bottom: 24px;
 }
 
-.intro__description {
+.section-1__subtitle {
   display: none;
 }
 
-.intro__bg-decor-pic {
+.section-1__img {
   position: relative;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -184,26 +225,25 @@ body {
   margin-bottom: 5px;
 }
 
-.intro__bg-decor-pic::before {
+.section-1__img::before {
   position: absolute;
-  width: 201.8px;
-  height: 201.8px;
+  width: 202px;
+  height: 202px;
   left: -20px;
   top: 6px;
   border-radius: 50%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(167, 47, 114, 0.7)), to(rgba(255, 106, 106, 0)));
-  background: linear-gradient(180deg, rgba(167, 47, 114, 0.7) 0%, rgba(255, 106, 106, 0) 100%);
-  -webkit-backdrop-filter: blur(46.0728px);
-          backdrop-filter: blur(46.0728px);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(167, 47, 114, 0.7)), color-stop(40%, rgba(255, 106, 106, 0.2)), to(rgba(255, 106, 106, 0)));
+  background: linear-gradient(180deg, rgba(167, 47, 114, 0.7) 0%, rgba(255, 106, 106, 0.2) 40%, rgba(255, 106, 106, 0) 100%);
+  -webkit-filter: drop-shadow(0px -5px 9px rgba(0, 0, 0, 0.1));
+          filter: drop-shadow(0px -5px 9px rgba(0, 0, 0, 0.1));
   z-index: -1;
   content: "";
 }
 
-.intro__button {
-  display: block;
+.section-1__button {
   width: 100%;
   border: none;
-  color: inherit;
+  color: #fff;
   position: relative;
   background-color: #ff834e;
   padding: 15px;
@@ -213,9 +253,16 @@ body {
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 11px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
-.intro__button::after {
+.section-1__button::before {
+  content: "Заказать звонок";
+}
+
+.section-1__button::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -228,134 +275,176 @@ body {
   content: "";
 }
 
-.intro__under-button-text {
+.section-1__sub-button {
   font-weight: 300;
   font-size: 12px;
   line-height: 15px;
   font-variant: small-caps;
   opacity: 0.5;
+  -webkit-box-ordinal-group: 7;
+      -ms-flex-order: 6;
+          order: 6;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
 }
 
-.how-we-work {
+.section-1__button {
+  width: 100%;
+  border: none;
+  color: #fff;
+  position: relative;
+  background-color: #ff834e;
+  padding: 15px;
+  text-align: left;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 11px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.section-1__button::before {
+  content: "Заказать звонок";
+}
+
+.section-1__button::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 58px;
+  height: 100%;
+  background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.21895 1.45829C6.00642 1.45829 5.83412 1.286 5.83412 1.07346C5.83412 0.860916 6.00642 0.688619 6.21895 0.688619L12.5893 0.688618C12.7164 0.688619 12.8291 0.750225 12.8992 0.845205C12.9935 0.915348 13.0545 1.0276 13.0545 1.15412L13.0545 7.5245C13.0545 7.73704 12.8822 7.90934 12.6697 7.90934C12.4571 7.90934 12.2848 7.73704 12.2848 7.5245L12.2848 1.85761L0.823379 13.3191C0.673091 13.4693 0.429427 13.4693 0.279138 13.3191C0.12885 13.1688 0.12885 12.9251 0.279138 12.7748L11.5957 1.45829L6.21895 1.45829Z' fill='white'/%3E%3C/svg%3E ");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #de774b;
+  content: "";
+}
+
+.section-2 {
+  padding: 40px 0 30px;
   background-color: #fff;
   color: #393939;
 }
 
-.how-we-work__title {
+.section-2__title {
+  width: 75%;
+  margin: 0 auto 23px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   text-align: center;
 }
 
-.how-we-work_item:hover #block-content__icon {
-  fill: #fff;
-}
-
-.how-we-work_item:hover .block-content__icon {
-  background-color: #fff;
-}
-
-.card {
-  display: block;
-}
-
-.card__image {
-  overflow: hidden;
-}
-
-.card__image > * {
+.section-2__cards-steps-container {
   width: 100%;
-  height: 100%;
-}
-
-.card:hover {
-  opacity: 1;
-}
-
-/* accordion */
-input::-ms-clear {
-  display: none;
-}
-
-.accordion {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 20px;
-}
-
-.accordion--item {
-  width: 100%;
-  background: #fff;
-  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
-          box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
-  border-radius: 20px;
-  font-family: Spartan, sans-serif;
-  font-size: 18px;
-  line-height: 1.4;
-  letter-spacing: 0;
-}
-
-.accordion--label {
   position: relative;
+  left: 15px;
+}
+
+.section-2__cards-steps-container::before {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 98%;
+  width: 5px;
+  border-left: 5px solid #929292;
+  border-image-source: url("data:image/svg+xml,%3Csvg width='5' height='12' viewBox='0 0 5 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='5' height='5' fill='%23929292'/%3E%3C/svg%3E%0A");
+  border-image-slice: 30%;
+  border-image-repeat: repeat;
+  content: "";
+}
+
+.card-step {
+  padding: 15px 30px 15px 0;
+  margin-left: 15px;
+  text-decoration: none;
+  color: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 34px 45px 33px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.accordion--icon::before {
-  background-position: center;
-  content: '';
-  display: block;
-  width: 83px;
-  height: 32px;
-  background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.78125L2.28396 2' stroke='black' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s;
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
+.card-step:first-child {
+  padding-top: 0;
 }
 
-.accordion--question {
-  margin: 0;
-  font-weight: 600;
+.card-step:last-child {
+  border-color: transparent;
+  padding-bottom: 0;
 }
 
-.accordion--answer {
-  font-weight: 500;
+.card-step:hover, .card-step:focus {
+  cursor: pointer;
+}
+
+.card-step:hover .card-step__number, .card-step:focus .card-step__number {
+  color: #EF8B54;
+}
+
+.card-step__number {
+  margin-right: 11px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 39px;
+  letter-spacing: 0.1em;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.card-step__title {
+  -ms-flex-preferred-size: 75%;
+      flex-basis: 75%;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.card-step__icon {
+  margin-left: auto;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+  width: 15px;
+  height: 15px;
+  background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581Z' fill='black'/%3E%3C/svg%3E%0A");
+}
+
+.card-step__icon_active {
+  background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581V9.0581Z' fill='black'/%3E%3C/svg%3E ");
+}
+
+.card-step__description {
   display: none;
-  overflow: hidden;
-  margin: 18px 0  0 83px;
-  -ms-flex-preferred-size: 1fr;
-      flex-basis: 1fr;
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 17px;
+  opacity: 0.7;
+  margin-top: 10px;
 }
 
-.accordion--input {
-  position: absolute;
-  opacity: 0;
-  z-index: -99;
-}
-
-.accordion--input:checked + .accordion--label::before {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.7812");
+.card-step__description_opened {
+  display: block;
 }
 /*# sourceMappingURL=styles.css.map */
