--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,7 +157,6 @@ body {
 
 .section-1 {
   background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png");
-  overflow: hidden;
 }
 
 .section-1__body {
@@ -446,5 +445,80 @@ body {
 
 .card-step__description_opened {
   display: block;
+}
+
+.section-3 {
+  padding-top: 70px;
+  background: no-repeat center/cover url("img/features/Blume-bg.png");
+}
+
+.section-3__content-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  gap: 30px;
+}
+
+.section-3__img {
+  height: 240px;
+  width: 240px;
+  margin-bottom: -20px;
+}
+
+.section-3__img_web-pay {
+  background: no-repeat center/cover url("img/features/logos.png");
+  margin-left: 10px;
+}
+
+.section-3__img_secure {
+  width: 280px;
+  background: no-repeat center/cover url("img/features/secure-mob.png");
+}
+
+.section-3__img_products {
+  background: no-repeat center/cover url("img/features/products-mob.png");
+  margin-left: 10px;
+}
+
+.section-3__title {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.section-3__title_secure {
+  width: 178px;
+}
+
+.section-3__title_products {
+  width: 178px;
+}
+
+.section-3__description {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 19px;
+}
+
+.section-3__separator {
+  width: 200px;
+  height: 1px;
+  background-color: #fff;
+  opacity: 0.1;
+  border: none;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.section-3__slider-controls {
+  display: none;
 }
 /*# sourceMappingURL=styles.css.map */
