--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -154,7 +154,6 @@ body {
 // INTRO
 .section-1 {
   background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png");
-  overflow: hidden;
 
   &__body {
     position: relative;
@@ -302,6 +301,7 @@ body {
   }
 }
 
+// HOW WE WORK
 .section-2 {
   padding: 40px 0 30px;
   background-color: #fff;
@@ -335,6 +335,7 @@ body {
     }
   }
 }
+
 .card-step {
   padding: 15px 30px 15px 0;
   margin-left: 15px;
@@ -345,16 +346,20 @@ body {
   justify-content: flex-start;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
   &:first-child {
-  padding-top: 0;
+    padding-top: 0;
   }
+
   &:last-child {
     border-color: transparent;
     padding-bottom: 0;
   }
+
   &:hover,
   &:focus {
     cursor: pointer;
+
     .card-step__number {
       color: #EF8B54;
     }
@@ -383,6 +388,7 @@ body {
     width: 15px;
     height: 15px;
     background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581Z' fill='black'/%3E%3C/svg%3E%0A");
+
     &_active {
       background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581V9.0581Z' fill='black'/%3E%3C/svg%3E ");
     }
@@ -397,12 +403,83 @@ body {
     line-height: 17px;
     opacity: 0.7;
     margin-top: 10px;
+
     &_opened {
       display: block;
     }
   }
 }
 
+// WEB PAY
+.section-3 {
+  padding-top: 70px;
+  background: no-repeat center/cover url("img/features/Blume-bg.png");
+
+  &__content-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+  }
+
+  &__img {
+    height: 240px;
+    width: 240px;
+    margin-bottom: -20px;
+
+
+    &_web-pay {
+      background: no-repeat center/cover url("img/features/logos.png");
+      margin-left: 10px;
+    }
+
+    &_secure {
+      width: 280px;
+      background: no-repeat center/cover url("img/features/secure-mob.png");
+    }
+
+    &_products {
+      background: no-repeat center/cover url("img/features/products-mob.png");
+      margin-left: 10px;
+    }
+
+  }
+
+  &__title {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 25px;
+
+    &_secure {
+      width: 178px;
+    }
+
+    &_products {
+      width: 178px;
+    }
+  }
+
+  &__description {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 19px;
+  }
+
+  &__separator {
+    width: 200px;
+    height: 1px;
+    background-color: #fff;
+    opacity: 0.1;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  &__slider-controls {
+    display: none;
+  }
+}
 // .how-we-work {
 //   background-color: #fff;
 //   color: $second-text;
