--- a/styles/styles.css
+++ b/styles/styles.css
@@ -724,4 +724,190 @@ body {
   background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='51' height='51' viewBox='0 0 51 51' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle r='23.7273' transform='matrix(-1 0 0 1 25.7727 25.7727)' stroke='%23EF8B54' stroke-width='3'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M32.5906 25.8697L32.5908 25.8698L31.1766 27.2841L31.1764 27.2839L22.9485 35.5119L21.5343 34.0977L29.7622 25.8697L21.5342 17.6417L22.9484 16.2275L31.1764 24.4555L31.1766 24.4553L32.5909 25.8695L32.5906 25.8697Z' fill='%23EF8B54'/%3E%3C/svg%3E ");
   content: "";
 }
+
+.section-6 {
+  position: relative;
+  top: -150px;
+  padding: 150px 0 85px;
+  background: no-repeat top center/cover url("img/footer/fancycrave-277756-unsplash.png");
+}
+
+.section-6__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.section-6__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  margin-bottom: 30px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  color: #EF8B54;
+}
+
+.section-6__subtitle {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 57px;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+}
+
+.section-6__banner {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  width: 100%;
+  padding: 20px 22px 21px 11px;
+  margin-bottom: 30px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  border: 2px solid #EF8B54;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.section-6__banner::before {
+  display: inline-block;
+  width: 9px;
+  height: 10px;
+  margin-right: 5px;
+  background: url("data:image/svg+xml,%3Csvg width='9' height='10' viewBox='0 0 9 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='4' y='0.306274' width='1' height='8.98594' fill='white'/%3E%3Crect y='5.29858' width='0.998438' height='9' transform='rotate(-90 0 5.29858)' fill='white'/%3E%3C/svg%3E ");
+  content: "";
+}
+
+.section-6__list {
+  margin-top: 16px;
+  padding: 0;
+}
+
+.section-6__list li {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  list-style-type: none;
+  margin-bottom: 9px;
+}
+
+.section-6__list li::before {
+  display: inline-block;
+  width: 9px;
+  height: 10px;
+  margin-right: 5px;
+  background: url("data:image/svg+xml,%3Csvg width='9' height='10' viewBox='0 0 9 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='4' y='0.306274' width='1' height='8.98594' fill='white'/%3E%3Crect y='5.29858' width='0.998438' height='9' transform='rotate(-90 0 5.29858)' fill='white'/%3E%3C/svg%3E ");
+  content: "";
+}
+
+.section-6__feedback-form {
+  display: block;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 15px 10px;
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
+}
+
+.section-6__feedback-form > * {
+  margin-bottom: 15px;
+}
+
+.section-6__input {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  padding: 0 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #f6f6f6;
+  width: 100%;
+  height: 45px;
+  border: 0.5px solid #D0D0D0;
+}
+
+.section-6__comment {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  resize: none;
+  padding: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #f6f6f6;
+  width: 100%;
+  height: 80px;
+  border: 0.5px solid #D0D0D0;
+}
+
+.section-6 .terms-of-use-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+}
+
+.section-6 .terms-of-use-container::before {
+  display: inline-block;
+  min-width: 22px;
+  width: 22px;
+  height: 22px;
+  margin-right: 14px;
+  background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='22' height='23' viewBox='0 0 22 23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.5' y='1.11694' width='21' height='20.9656' rx='1.5' stroke='%23D0D0D0'/%3E%3C/svg%3E ");
+  content: "";
+}
+
+.section-6 .terms-of-use-input:checked + .terms-of-use-container::before {
+  background-image: url("data:image/svg+xml,%3Csvg width='22' height='23' viewBox='0 0 22 23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.5' y='1.11694' width='21' height='20.9656' rx='1.5' stroke='%23D0D0D0'/%3E%3Crect x='16.6075' y='6.00085' width='2.26882' height='13.1109' transform='rotate(40.5175 16.6075 6.00085)' fill='%23EC5C36'/%3E%3Crect width='2.26825' height='7.75718' transform='matrix(0.647038 -0.762458 0.763455 0.645861 3.64526 12.2402)' fill='%23EC5C36'/%3E%3C/svg%3E ");
+}
+
+.section-6__captcha {
+  width: 204px;
+  height: 51px;
+}
+
+.section-6__button {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 13px 0;
+  text-align: center;
+  width: 100%;
+  border: none;
+  background: linear-gradient(113.3deg, #DE9B55 -8.73%, #EE5432 93.23%);
+  -webkit-box-shadow: 0px 4px 4px rgba(222, 155, 85, 0.3);
+          box-shadow: 0px 4px 4px rgba(222, 155, 85, 0.3);
+  color: inherit;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 0;
+}
+
+._sr-only {
+  position: absolute;
+  z-index: -99;
+  display: none;
+}
 /*# sourceMappingURL=styles.css.map */
