--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -589,6 +589,7 @@ body {
 .section-5 {
   position: relative;
   top: -150px;
+
   &__title {
     font-weight: 400;
     font-size: 21px;
@@ -596,18 +597,10 @@ body {
     text-align: center;
     margin-bottom: 38px;
   }
-  &__slider {
-    display: flex;
-    align-items: center;
-    margin-bottom: 55px;
-  }
-
   &__img {
-    padding: 0 18%;
-    width: 67%;
-    height: auto;
+    min-width: 210px;
+    box-sizing: border-box;
   }
-
   &__slider-controls {
     width: max-content;
     margin: 0 auto;
@@ -632,7 +625,6 @@ body {
 // 
 .section-6 {
   position: relative;
-  top: -150px;
   padding: 150px 0 85px;
   background: no-repeat top center/cover url("img/footer/fancycrave-277756-unsplash.png");
 
@@ -791,7 +783,7 @@ body {
 
 .footer {
   position: relative;
-  top: -75px;
+  padding: 50px 0;
   
   &__body {
     margin: 0 auto;
