styles for screen width 540 - 1024

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -296,7 +296,81 @@ body {
   
     &__cards-steps-container {
       position: relative;
-  
+    
+    .card-step {
+        padding: 15px 14px 15px 0;
+        margin-left: 30px;
+        text-decoration: none;
+        color: inherit;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      
+        &:first-child {
+          padding-top: 0;
+        }
+      
+        &:last-child {
+          border-color: transparent;
+          padding-bottom: 0;
+        }
+      
+        &:hover,
+        &:focus {
+          cursor: pointer;
+      
+          .card-step__number {
+            color: #EF8B54;
+          }
+        }
+      
+        &__number {
+          margin-right: 11px;
+          font-weight: 700;
+          font-size: 32px;
+          line-height: 39px;
+          letter-spacing: 0.1em;
+          order: 1;
+        }
+      
+        &__title {
+          flex-basis: 70%;
+          font-weight: 700;
+          font-size: 12px;
+          line-height: 15px;
+          order: 2;
+        }
+      
+        &__icon {
+          margin-left: auto;
+          order: 3;
+          width: 15px;
+          height: 15px;
+          background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581Z' fill='black'/%3E%3C/svg%3E%0A");
+      
+          &_active {
+            background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581V9.0581Z' fill='black'/%3E%3C/svg%3E ");
+          }
+        }
+      
+        &__description {
+          display: none;
+          order: 5;
+          flex-basis: 1;
+          font-weight: 400;
+          font-size: 11px;
+          line-height: 17px;
+          opacity: 0.7;
+          margin-top: 10px;
+      
+          &_opened {
+            display: block;
+          }
+        }
+      }
+
       &::before {
         position: absolute;
         top: 2px;
@@ -308,80 +382,6 @@ body {
         border-image-slice: 30%;
         border-image-repeat: repeat;
         content: "";
-      }
-    }
-  }
-  
-  .card-step {
-    padding: 15px 14px 15px 0;
-    margin-left: 30px;
-    text-decoration: none;
-    color: inherit;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  
-    &:first-child {
-      padding-top: 0;
-    }
-  
-    &:last-child {
-      border-color: transparent;
-      padding-bottom: 0;
-    }
-  
-    &:hover,
-    &:focus {
-      cursor: pointer;
-  
-      .card-step__number {
-        color: #EF8B54;
-      }
-    }
-  
-    &__number {
-      margin-right: 11px;
-      font-weight: 700;
-      font-size: 32px;
-      line-height: 39px;
-      letter-spacing: 0.1em;
-      order: 1;
-    }
-  
-    &__title {
-      flex-basis: 70%;
-      font-weight: 700;
-      font-size: 12px;
-      line-height: 15px;
-      order: 2;
-    }
-  
-    &__icon {
-      margin-left: auto;
-      order: 3;
-      width: 15px;
-      height: 15px;
-      background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581Z' fill='black'/%3E%3C/svg%3E%0A");
-  
-      &_active {
-        background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581V9.0581Z' fill='black'/%3E%3C/svg%3E ");
-      }
-    }
-  
-    &__description {
-      display: none;
-      order: 5;
-      flex-basis: 1;
-      font-weight: 400;
-      font-size: 11px;
-      line-height: 17px;
-      opacity: 0.7;
-      margin-top: 10px;
-  
-      &_opened {
-        display: block;
       }
     }
   }
@@ -849,6 +849,22 @@ body {
   
 }
 
+@media screen and (min-width: 540px) {
+  .section-4 {
+    .feedback {
+      &__title {
+        font-size: 18px;
+        font-weight: 400;
+      }
+      &::before {
+        width: 53px;
+        height: 53px;
+        margin-right: 23px;
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     padding: 0;
@@ -895,10 +911,51 @@ body {
     }
 
     &__button {
+      // align-self: flex-start;
+      // width: 329px;
       font-size: 18px;
       line-height: 22px;
+      order: 6;
+      margin-bottom: 50px;
+    }
+
+    &__sub-button {
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 17px;
+      align-self: flex-start;
+      order: 5;
+      margin-bottom: 15px;
     }
   }
+
+  .section-2 {
+    &__title {
+      margin-bottom: 55px;
+    }
+    &__cards-steps-container {
+      &::before {
+        left: 25px
+      }
+    }
+    .card-step {
+      padding-right: 50px;
+      margin-left: 60px;
+    }
+  }
+
+  .section-4 {
+    &__cards-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .card {
+          flex-basis: 280px;
+          flex-grow: 330px
+        }
+    }
+  }
+  
 }
 
 @media  screen and (min-width: 1024px) {
@@ -934,6 +991,13 @@ body {
   }
 }
 
+@media screen and (min-width: 1100px) {
+  
+}
+
+@media screen and (min-width: 1440px) {
+  
+}
 // // svg иконка меняет цвет при наведении
 // .how-we-work_item:hover {
 //   #block-content__icon { 
