--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,19 +291,7 @@ body {
   .section-2__cards-steps-container {
     position: relative;
   }
-  .section-2__cards-steps-container::before {
-    position: absolute;
-    top: 2px;
-    left: 10px;
-    height: 98%;
-    width: 5px;
-    border-left: 5px solid #929292;
-    border-image-source: url("data:image/svg+xml,%3Csvg width='5' height='12' viewBox='0 0 5 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='5' height='5' fill='%23929292'/%3E%3C/svg%3E%0A");
-    border-image-slice: 30%;
-    border-image-repeat: repeat;
-    content: "";
-  }
-  .card-step {
+  .section-2__cards-steps-container .card-step {
     padding: 15px 14px 15px 0;
     margin-left: 30px;
     text-decoration: none;
@@ -321,20 +309,20 @@ body {
             align-items: center;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
-  .card-step:first-child {
+  .section-2__cards-steps-container .card-step:first-child {
     padding-top: 0;
   }
-  .card-step:last-child {
+  .section-2__cards-steps-container .card-step:last-child {
     border-color: transparent;
     padding-bottom: 0;
   }
-  .card-step:hover, .card-step:focus {
+  .section-2__cards-steps-container .card-step:hover, .section-2__cards-steps-container .card-step:focus {
     cursor: pointer;
   }
-  .card-step:hover .card-step__number, .card-step:focus .card-step__number {
+  .section-2__cards-steps-container .card-step:hover .card-step__number, .section-2__cards-steps-container .card-step:focus .card-step__number {
     color: #EF8B54;
   }
-  .card-step__number {
+  .section-2__cards-steps-container .card-step__number {
     margin-right: 11px;
     font-weight: 700;
     font-size: 32px;
@@ -344,7 +332,7 @@ body {
         -ms-flex-order: 1;
             order: 1;
   }
-  .card-step__title {
+  .section-2__cards-steps-container .card-step__title {
     -ms-flex-preferred-size: 70%;
         flex-basis: 70%;
     font-weight: 700;
@@ -354,7 +342,7 @@ body {
         -ms-flex-order: 2;
             order: 2;
   }
-  .card-step__icon {
+  .section-2__cards-steps-container .card-step__icon {
     margin-left: auto;
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
@@ -363,10 +351,10 @@ body {
     height: 15px;
     background: no-repeat center/cover url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581Z' fill='black'/%3E%3C/svg%3E%0A");
   }
-  .card-step__icon_active {
+  .section-2__cards-steps-container .card-step__icon_active {
     background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2558 7.49998C14.2558 3.77905 11.2325 0.744171 7.49995 0.744171C3.7674 0.744171 0.744141 3.77905 0.744141 7.49998C0.744141 11.2209 3.77902 14.2558 7.49995 14.2558C11.2209 14.2558 14.2558 11.2209 14.2558 7.49998ZM1.69763 7.49998C1.69763 4.30231 4.30228 1.69766 7.49995 1.69766C10.6976 1.69766 13.3023 4.30231 13.3023 7.49998C13.3023 10.6977 10.6976 13.3023 7.49995 13.3023C4.30228 13.3023 1.69763 10.6977 1.69763 7.49998Z' fill='black'/%3E%3Cpath d='M10.8719 9.0581C10.965 8.96507 11.0115 8.84879 11.0115 8.72089C11.0115 8.60461 10.965 8.4767 10.8719 8.38368L7.80218 5.31391C7.70916 5.22088 7.59288 5.17437 7.46497 5.17437C7.33706 5.17437 7.22078 5.22088 7.12776 5.31391L4.05799 8.38368C3.87195 8.56972 3.87195 8.87205 4.05799 9.0581C4.24404 9.24414 4.54636 9.24414 4.73241 9.0581L7.46497 6.32554L10.1975 9.0581C10.3836 9.24414 10.6859 9.24414 10.8719 9.0581V9.0581Z' fill='black'/%3E%3C/svg%3E ");
   }
-  .card-step__description {
+  .section-2__cards-steps-container .card-step__description {
     display: none;
     -webkit-box-ordinal-group: 6;
         -ms-flex-order: 5;
@@ -379,8 +367,20 @@ body {
     opacity: 0.7;
     margin-top: 10px;
   }
-  .card-step__description_opened {
+  .section-2__cards-steps-container .card-step__description_opened {
     display: block;
+  }
+  .section-2__cards-steps-container::before {
+    position: absolute;
+    top: 2px;
+    left: 10px;
+    height: 98%;
+    width: 5px;
+    border-left: 5px solid #929292;
+    border-image-source: url("data:image/svg+xml,%3Csvg width='5' height='12' viewBox='0 0 5 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='5' height='5' fill='%23929292'/%3E%3C/svg%3E%0A");
+    border-image-slice: 30%;
+    border-image-repeat: repeat;
+    content: "";
   }
   .section-3 {
     padding: 70px 0 120px;
@@ -840,6 +840,18 @@ body {
   }
 }
 
+@media screen and (min-width: 540px) {
+  .section-4 .feedback__title {
+    font-size: 18px;
+    font-weight: 400;
+  }
+  .section-4 .feedback::before {
+    width: 53px;
+    height: 53px;
+    margin-right: 23px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     padding: 0;
@@ -879,6 +891,48 @@ body {
   .section-1__button {
     font-size: 18px;
     line-height: 22px;
+    -webkit-box-ordinal-group: 7;
+        -ms-flex-order: 6;
+            order: 6;
+    margin-bottom: 50px;
+  }
+  .section-1__sub-button {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
+    margin-bottom: 15px;
+  }
+  .section-2__title {
+    margin-bottom: 55px;
+  }
+  .section-2__cards-steps-container::before {
+    left: 25px;
+  }
+  .section-2 .card-step {
+    padding-right: 50px;
+    margin-left: 60px;
+  }
+  .section-4__cards-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .section-4__cards-container .card {
+    -ms-flex-preferred-size: 280px;
+        flex-basis: 280px;
+    -webkit-box-flex: 330px;
+        -ms-flex-positive: 330px;
+            flex-grow: 330px;
   }
 }
 
