--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -470,16 +470,78 @@ body {
       content: "";
     }
     &__title {
+      text-transform: uppercase;
       margin-bottom: 30px;
+      margin-left: 5%;
   
       &::before {
         font-weight: 400;
         font-size: 20.8px;
         line-height: 25px;
-        content: "НАШИ КЕЙСЫ";
+        content: "наши кейсы";
       }
     }
-  
+    &__cards-container {
+      padding: 0 5%;
+      .card {
+        display: block;
+        position: relative;
+        box-sizing: border-box;
+        padding: 17px;
+        width: 100%;
+        height: 70%;
+        background-color: rgba(20, 20, 20, 0.6);
+        margin-bottom: 40px;
+        border-radius: 4px;
+      
+        &:hover,
+        &:focus {
+          &::after {
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            width: 100%;
+            height: 7px;
+            border-radius: 5.93981px;
+            background-color: #DE9B55;
+            box-shadow: 0px 1.69709px 3.39417px rgba(222, 155, 85, 0.4);
+            content: "";
+          }
+        }
+      
+        &__img-wrap {
+          width: 100%;
+          height: 70%;
+          display: flex;
+          align-items: center;
+          overflow: hidden;
+          border-radius: 2.5px;
+        }
+      
+        &__img {
+          width: 100%;
+          height: auto;
+        }
+      
+        &__title {
+          font-family: 'Roboto', sans-serif;
+          font-weight: 500;
+          font-size: 22px;
+          line-height: 26px;
+          margin: 10px 0;
+        }
+      
+        &__subtitle {
+          font-family: 'Roboto', sans-serif;
+          font-weight: 300;
+          font-size: 15px;
+          line-height: 18px;
+          opacity: 0.8;
+        }
+      }
+
+    }
+
     &::after {
       display: block;
       margin: 0 auto;
@@ -489,66 +551,7 @@ body {
       opacity: 0.1;
       content: "";
     }
-  }
-  
-  .card {
-    display: block;
-    position: relative;
-    box-sizing: border-box;
-    padding: 17px;
-    width: 100%;
-    height: 70%;
-    background-color: rgba(20, 20, 20, 0.6);
-    margin-bottom: 40px;
-    border-radius: 4px;
-  
-    &:hover,
-    &:focus {
-      &::after {
-        position: absolute;
-        bottom: -10px;
-        left: 0;
-        width: 100%;
-        height: 7px;
-        border-radius: 5.93981px;
-        background-color: #DE9B55;
-        box-shadow: 0px 1.69709px 3.39417px rgba(222, 155, 85, 0.4);
-        content: "";
-      }
-    }
-  
-    &__img-wrap {
-      width: 100%;
-      height: 70%;
-      display: flex;
-      align-items: center;
-      overflow: hidden;
-      border-radius: 2.5px;
-    }
-  
-    &__img {
-      width: 100%;
-      height: auto;
-    }
-  
-    &__title {
-      font-family: 'Roboto', sans-serif;
-      font-weight: 500;
-      font-size: 22px;
-      line-height: 26px;
-      margin: 10px 0;
-    }
-  
-    &__subtitle {
-      font-family: 'Roboto', sans-serif;
-      font-weight: 300;
-      font-size: 15px;
-      line-height: 18px;
-      opacity: 0.8;
-    }
-  }
-  
-  .feedback {
+    .feedback {
     width: 100%;
     box-sizing: border-box;
     position: relative;
@@ -596,8 +599,9 @@ body {
       border-radius: 5px;
       background-color: transparent;
     }
+    }  
   }
-  
+
   // OUR CLIENTS
   .section-5 {
     position: relative;
@@ -851,24 +855,43 @@ body {
 
 @media screen and (min-width: 540px) {
   .section-4 {
+    &__title {
+      text-align: center;
+      margin-left: 0;
+      &::before {
+        content: "кейсы говорят за себя";
+      }
+    }
+
+    &__cards-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 31px;
+      .card {
+        flex-basis: 280px;
+        flex-grow: 330px
+      }
+    }  
+
     .feedback {
       &__title {
         font-size: 18px;
         font-weight: 400;
       }
+    
       &::before {
         width: 53px;
         height: 53px;
         margin-right: 23px;
       }
-    }
+    }    
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 0;
-    width: 80%;
+    padding: 0 50px;
   }
 
   .header {
@@ -944,18 +967,6 @@ body {
     }
   }
 
-  .section-4 {
-    &__cards-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        .card {
-          flex-basis: 280px;
-          flex-grow: 330px
-        }
-    }
-  }
-  
 }
 
 @media  screen and (min-width: 1024px) {
@@ -970,21 +981,6 @@ body {
       background-image: url("img/header/Logo.png");
     }
 
-    &__button {
-      font-family: SourceSansPro, sans-serif;
-      font-weight: 300;
-      font-size: 12px;
-      line-height: 20px;
-      color: $accent-color;
-      border: 1px solid $accent-color;
-      text-align: center;
-      display: inline-block;
-      background-color: transparent;
-    }
-    &__contact-number {
-      display: inline-block;
-    }
-
     &__burger-menu-icon {
       margin-left: auto;
     }
@@ -992,7 +988,23 @@ body {
 }
 
 @media screen and (min-width: 1100px) {
-  
+
+  .header {
+    &__button {
+    font-family: SourceSansPro, sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 20px;
+    color: $accent-color;
+    border: 1px solid $accent-color;
+    text-align: center;
+    display: inline-block;
+    background-color: transparent;
+    }
+    &__contact-number {
+    display: inline-block;
+    }
+  }
 }
 
 @media screen and (min-width: 1440px) {
